--- a/index.html
+++ b/index.html
@@ -9,7 +9,29 @@
 </head>
 
 <body>
-
+    <header class="header">
+        <div class="header__content">
+            <div class="header__brand">
+                <a href="#home">
+                    <img class="header__brand--logo" src="./assets/logo.jpg" alt="logo" />
+                </a>
+            </div>
+            <nav id="navbar" class="header__nav">
+                <ul class="header__nav-list">
+                    <li class="header__nav-item">
+                        <a class="header__nav-link" href="#about">ABOUT</a>
+                    </li>
+                    <li class="header__nav-item">
+                        <a class="header__nav-link header__nav-link--active" href="#recipes">RECIPES</a>
+                    </li>
+                    <li class="header__nav-item">
+                        <a class="header__nav-link" href="#contact">CONTACT</a>
+                    </li>
+                </ul>
+            </nav>
+            <!-- <div class="menu">☰</div> -->
+        </div>
+    </header>
 </body>
 
 </html>
