add/hero component

--- a/index.html
+++ b/index.html
@@ -32,6 +32,20 @@
             <!-- <div class="menu">☰</div> -->
         </div>
     </header>
+
+    <main class="main">
+        <section id="hero-section">
+            <div class="hero__content">
+                <h1 class="hero__title">Re-Make better use of food!</h1>
+            </div>
+            <div class="hero__description">
+                <h2 class="hero__description--subtitle">Prescribing to save money and improve health</h2>
+                <p>Our recipes help you make the most of your food, save money, and boost your health with
+                    wholesome, nutritious ingredients!</p>
+            </div>
+        </section>
+    </main>
+
 </body>
 
 </html>
