--- a/hero.html
+++ b/hero.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Healthy Recipes - HOME</title>
+    <title>Healthy Recipes - HERO</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 
@@ -13,7 +13,7 @@
         <div class="header__content">
             <div class="header__brand">
                 <a href="#home">
-                    <img class="header__brand--logo" src="./assets/logo.jpg" alt="logo" />
+                    <img class="header__brand--logo" src="./assets/logo.png" alt="logo" />
                 </a>
             </div>
             <nav id="navbar" class="header__nav">
@@ -29,7 +29,7 @@
                     </li>
                 </ul>
             </nav>
-            <!-- <div class="menu">☰</div> -->
+            <div class="header__menu-button">☰☰</div>
         </div>
     </header>
 
