--- a/hero.html
+++ b/hero.html
@@ -12,7 +12,7 @@
     <header class="header">
         <div class="header__content">
             <div class="header__brand">
-                <a href="#home">
+                <a href="./hero.html">
                     <img class="header__brand--logo" src="./assets/logo.png" alt="logo" />
                 </a>
             </div>
@@ -22,10 +22,10 @@
                         <a class="header__nav-link" href="./about.html">ABOUT</a>
                     </li>
                     <li class="header__nav-item">
-                        <a class="header__nav-link header__nav-link--active" href="#recipes">RECIPES</a>
+                        <a class="header__nav-link header__nav-link--active" href="./recipes.html">RECIPES</a>
                     </li>
                     <li class="header__nav-item">
-                        <a class="header__nav-link" href="#contact">CONTACT</a>
+                        <a class="header__nav-link" href="./contact.html">CONTACT</a>
                     </li>
                 </ul>
             </nav>
