style/recipes card

--- a/recipes.html
+++ b/recipes.html
@@ -40,7 +40,60 @@
                     <h3 class="recipes__title">Healthy Recipes</h3>
                 </div>
                 <div class="recipes__body">
-
+                    <div class="recipe__card">
+                        <img alt="Tigela de abacate" class="recipe__card-image" src="./assets/recipes/bowl-de-aguacate.jpg" />
+                        <div class="recipe__card-item">
+                            <h4 class="recipe__card-title">Bowl de aguacate</h4>
+                            <p class="recipe__card-description">Receta refrescante y llena de vitaminas para su
+                                desayuno.</p>
+                            <button class="recipe__card-button">Ver receta</button>
+                        </div>
+                    </div>
+                    <div class="recipe__card">
+                        <img alt="Ensalada de kiwi" class="recipe__card-image" src="./assets/recipes/ensalada-de-kiwi.jpg" />
+                        <div class="recipe__card-item">
+                            <h4 class="recipe__card-title">Ensalada de kiwi</h4>
+                            <p class="recipe__card-description">Receta refrescante y llena de vitaminas para su
+                                desayuno.</p>
+                            <button class="recipe__card-button">Ver receta</button>
+                        </div>
+                    </div>
+                    <div class="recipe__card">
+                        <img alt="Mix de vegetales" class="recipe__card-image" src="./assets/recipes/mix-de-vegetales.jpg" />
+                        <div class="recipe__card-item">
+                            <h4 class="recipe__card-title">Mix de vegetales</h4>
+                            <p class="recipe__card-description">Receta refrescante y llena de vitaminas para su
+                                desayuno.</p>
+                            <button class="recipe__card-button">Ver receta</button>
+                        </div>
+                    </div>
+                    <div class="recipe__card">
+                        <img alt="Pimentones a la Juliana" class="recipe__card-image" src="./assets/recipes/pimentones-a-la-juliana.jpg" />
+                        <div class="recipe__card-item">
+                            <h4 class="recipe__card-title">Pimentones a la Juliana</h4>
+                            <p class="recipe__card-description">Receta refrescante y llena de vitaminas para su
+                                desayuno.</p>
+                            <button class="recipe__card-button">Ver receta</button>
+                        </div>
+                    </div>
+                    <div class="recipe__card">
+                        <img alt="Plato oriental" class="recipe__card-image" src="./assets/recipes/plato-oriental.jpg" />
+                        <div class="recipe__card-item">
+                            <h4 class="recipe__card-title">Plato oriental</h4>
+                            <p class="recipe__card-description">Receta refrescante y llena de vitaminas para su
+                                desayuno.</p>
+                            <button class="recipe__card-button">Ver receta</button>
+                        </div>
+                    </div>
+                    <div class="recipe__card">
+                        <img alt="Remolachas horneadas" class="recipe__card-image" src="./assets/recipes/remolachas-horneadas.jpg" />
+                        <div class="recipe__card-item">
+                            <h4 class="recipe__card-title">Remolachas horneadas</h4>
+                            <p class="recipe__card-description">Receta refrescante y llena de vitaminas para su
+                                desayuno.</p>
+                            <button class="recipe__card-button">Ver receta</button>
+                        </div>
+                    </div>
                 </div>
             </div>
         </section>
