feat/footer component

--- a/about.html
+++ b/about.html
@@ -61,6 +61,12 @@
         </section>
     </main>
 
+    <footer class="footer">
+        <div class="footer__content">
+            <p class="footer__text">© 2026 <span class="main-font">fruta & fruto</span>. All rights reserved.</p>
+        </div>
+    </footer>
+
 </body>
 
 </html>
