--- a/recipes.html
+++ b/recipes.html
@@ -41,63 +41,69 @@
                 </div>
                 <div class="recipes__body">
                     <div class="recipe__card">
-                        <img alt="Tigela de abacate" class="recipe__card-image" src="./assets/recipes/bowl-de-aguacate.jpg" />
+                        <img alt="Tigela de abacate" class="recipe__card-image"
+                            src="./assets/recipes/bowl-de-aguacate.jpg" />
                         <div class="recipe__card-item">
-                            <h4 class="recipe__card-title">Bowl de aguacate</h4>
-                            <p class="recipe__card-description">Receta refrescante y llena de vitaminas para su
-                                desayuno.</p>
-                            <button class="recipe__card-button">Ver receta</button>
+                            <h4 class="recipe__card-title">Avocado bowl</h4>
+                            <p class="recipe__card-description">Creamy avocado served in a bowl with toppings.</p>
                         </div>
+                        <button class="recipe__card-button">Ver receta</button>
                     </div>
                     <div class="recipe__card">
-                        <img alt="Ensalada de kiwi" class="recipe__card-image" src="./assets/recipes/ensalada-de-kiwi.jpg" />
+                        <img alt="Ensalada de kiwi" class="recipe__card-image"
+                            src="./assets/recipes/ensalada-de-kiwi.jpg" />
                         <div class="recipe__card-item">
-                            <h4 class="recipe__card-title">Ensalada de kiwi</h4>
-                            <p class="recipe__card-description">Receta refrescante y llena de vitaminas para su
-                                desayuno.</p>
-                            <button class="recipe__card-button">Ver receta</button>
+                            <h4 class="recipe__card-title">Kiwi salad</h4>
+                            <p class="recipe__card-description">Fresh kiwi mixed with greens for a tangy flavor.</p>
                         </div>
+                        <button class="recipe__card-button">Ver receta</button>
                     </div>
                     <div class="recipe__card">
-                        <img alt="Mix de vegetales" class="recipe__card-image" src="./assets/recipes/mix-de-vegetales.jpg" />
+                        <img alt="Mix de vegetales" class="recipe__card-image"
+                            src="./assets/recipes/mix-de-vegetales.jpg" />
                         <div class="recipe__card-item">
-                            <h4 class="recipe__card-title">Mix de vegetales</h4>
-                            <p class="recipe__card-description">Receta refrescante y llena de vitaminas para su
-                                desayuno.</p>
-                            <button class="recipe__card-button">Ver receta</button>
+                            <h4 class="recipe__card-title">Mixed vegetables</h4>
+                            <p class="recipe__card-description">A healthy medley of colorful, steamed vegetables.</p>
                         </div>
+                        <button class="recipe__card-button">Ver receta</button>
                     </div>
                     <div class="recipe__card">
-                        <img alt="Pimentones a la Juliana" class="recipe__card-image" src="./assets/recipes/pimentones-a-la-juliana.jpg" />
+                        <img alt="Pimentones a la Juliana" class="recipe__card-image"
+                            src="./assets/recipes/pimentones-a-la-juliana.jpg" />
                         <div class="recipe__card-item">
-                            <h4 class="recipe__card-title">Pimentones a la Juliana</h4>
-                            <p class="recipe__card-description">Receta refrescante y llena de vitaminas para su
-                                desayuno.</p>
-                            <button class="recipe__card-button">Ver receta</button>
+                            <h4 class="recipe__card-title">Julienne bell peppers</h4>
+                            <p class="recipe__card-description">Sweet peppers sliced into thin, elegant strips.</p>
                         </div>
+                        <button class="recipe__card-button">Ver receta</button>
                     </div>
                     <div class="recipe__card">
-                        <img alt="Plato oriental" class="recipe__card-image" src="./assets/recipes/plato-oriental.jpg" />
+                        <img alt="Plato oriental" class="recipe__card-image"
+                            src="./assets/recipes/plato-oriental.jpg" />
                         <div class="recipe__card-item">
-                            <h4 class="recipe__card-title">Plato oriental</h4>
-                            <p class="recipe__card-description">Receta refrescante y llena de vitaminas para su
-                                desayuno.</p>
-                            <button class="recipe__card-button">Ver receta</button>
+                            <h4 class="recipe__card-title">Oriental dish</h4>
+                            <p class="recipe__card-description">A flavorful stir-fry with classic Asian seasonings.</p>
                         </div>
+                        <button class="recipe__card-button">Ver receta</button>
                     </div>
                     <div class="recipe__card">
-                        <img alt="Remolachas horneadas" class="recipe__card-image" src="./assets/recipes/remolachas-horneadas.jpg" />
+                        <img alt="Remolachas horneadas" class="recipe__card-image"
+                            src="./assets/recipes/remolachas-horneadas.jpg" />
                         <div class="recipe__card-item">
-                            <h4 class="recipe__card-title">Remolachas horneadas</h4>
-                            <p class="recipe__card-description">Receta refrescante y llena de vitaminas para su
-                                desayuno.</p>
-                            <button class="recipe__card-button">Ver receta</button>
+                            <h4 class="recipe__card-title">Baked beets</h4>
+                            <p class="recipe__card-description">Roasted root vegetables with a sweet, earthy taste.</p>
                         </div>
+                        <button class="recipe__card-button">Ver receta</button>
                     </div>
                 </div>
             </div>
         </section>
     </main>
+
+    <footer class="footer">
+        <div class="footer__content">
+            <p class="footer__text">© 2026 <span class="main-font">fruta & fruto</span>. All rights reserved.</p>
+        </div>
+    </footer>
 
 </body>
 
