--- a/hero.html
+++ b/hero.html
@@ -47,6 +47,29 @@
         </section>
     </main>
 
+    <footer class="footer">
+        <div class="footer__content">
+            <p class="footer__text">© 2026 <span class="main-font">fruta & fruto</span>. All rights reserved.</p>
+            <!-- <ul class="footer__social">
+                <li class="footer__social-link">
+                    <a href="https://github.com/abelstor" target="_blank" class="footer__icon">
+                        <ion-icon name="logo-github"></ion-icon>
+                    </a>
+                </li>
+                <li class="footer__social-link">
+                    <a href="https://www.instagram.com/abelstor/" target="_blank" class="footer__icon">
+                        <ion-icon name="logo-instagram"></ion-icon>
+                    </a>
+                </li>
+                <li class="footer__social-link">
+                    <a href="https://www.linkedin.com/in/abelstor" target="_blank" class="footer__icon">
+                        <ion-icon name="logo-linkedin"></ion-icon>
+                    </a>
+                </li>
+            </ul> -->
+        </div>
+    </footer>
+
 </body>
 
 </html>
