feat/contact component

--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>fruta & fruto - ABOUT</title>
+    <title>fruta & fruto - CONTACT</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 
@@ -34,28 +34,13 @@
     </header>
 
     <main class="main">
-        <section id="about__section">
-            <div class="about__content">
-                <div class="about__header">
-                    <h3 class="about__title">Who we are</h3>
-                    <p class="about__description">Get to know the community behind the initiative!</p>
+        <section id="contact__section">
+            <div class="contact__content">
+                <div class="contact__header">
+                    <h3 class="contact__title">Contact</h3>
                 </div>
-                <div class="about__body">
-                    <div class="about__person">
-                        <img class="about__person-image" src="./assets/people/marcela.jpg" alt="team" />
-                        <span class="about__person-name">Roberta</span>
-                        <span class="about__person-rol">Contents</span>
-                    </div>
-                    <div class="about__person">
-                        <img class="about__person-image" src="./assets/people/roberta.jpg" alt="team" />
-                        <span class="about__person-name">Marcela</span>
-                        <span class="about__person-rol">Chef</span>
-                    </div>
-                    <div class="about__person">
-                        <img class="about__person-image" src="./assets/people/andrea.jpg" alt="team" />
-                        <span class="about__person-name">Andrea</span>
-                        <span class="about__person-rol">Small producer</span>
-                    </div>
+                <div class="contact__body">
+
                 </div>
             </div>
         </section>
