--- a/hero.html
+++ b/hero.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Healthy Recipes - HERO</title>
+    <title>fruta & fruto - HOME</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 
