style/form section

--- a/hero.html
+++ b/hero.html
@@ -37,7 +37,7 @@
         <section id="hero-section">
             <div class="hero__content">
                 <h1 class="hero__title">Re-Make better use of food!</h1>
-                <div><a href="#recipes" class="hero__button">Taste healthy recipes</a></div>
+                <div><a href="./recipes.html" class="hero__button">Taste healthy recipes</a></div>
             </div>
             <div class="hero__description">
                 <h2 class="hero__description--subtitle">Prescribing to save money and improve health</h2>
