--- a/contact.html
+++ b/contact.html
@@ -40,7 +40,24 @@
                     <h3 class="contact__title">Contact</h3>
                 </div>
                 <div class="contact__body">
+                    <form class="contact__form">
+                        <div class="form-group">
+                            <label for="name" class="form-group__label">Name:</label>
+                            <input type="text" id="name" class="form-group__input" placeholder="Your name">
+                        </div>
 
+                        <div class="form-group">
+                            <label for="email" class="form-group__label">Email:</label>
+                            <input type="email" id="email" class="form-group__input" placeholder="Your email">
+                        </div>
+
+                        <div class="form-group">
+                            <label for="message" class="form-group__label">Message:</label>
+                            <textarea id="message" class="form-group__textarea" placeholder="Your message"></textarea>
+                        </div>
+
+                        <button type="submit" class="button--submit">Send Message</button>
+                    </form>
                 </div>
             </div>
         </section>
