--- a/recipes.html
+++ b/recipes.html
@@ -47,7 +47,7 @@
                             <h4 class="recipe__card-title">Avocado bowl</h4>
                             <p class="recipe__card-description">Creamy avocado served in a bowl with toppings.</p>
                         </div>
-                        <button class="recipe__card-button">Ver receta</button>
+                        <button class="recipe__card-button">View recipe</button>
                     </div>
                     <div class="recipe__card">
                         <img alt="Ensalada de kiwi" class="recipe__card-image"
@@ -56,7 +56,7 @@
                             <h4 class="recipe__card-title">Kiwi salad</h4>
                             <p class="recipe__card-description">Fresh kiwi mixed with greens for a tangy flavor.</p>
                         </div>
-                        <button class="recipe__card-button">Ver receta</button>
+                        <button class="recipe__card-button">View recipe</button>
                     </div>
                     <div class="recipe__card">
                         <img alt="Mix de vegetales" class="recipe__card-image"
@@ -65,7 +65,7 @@
                             <h4 class="recipe__card-title">Mixed vegetables</h4>
                             <p class="recipe__card-description">A healthy medley of colorful, steamed vegetables.</p>
                         </div>
-                        <button class="recipe__card-button">Ver receta</button>
+                        <button class="recipe__card-button">View recipe</button>
                     </div>
                     <div class="recipe__card">
                         <img alt="Pimentones a la Juliana" class="recipe__card-image"
@@ -74,7 +74,7 @@
                             <h4 class="recipe__card-title">Julienne bell peppers</h4>
                             <p class="recipe__card-description">Sweet peppers sliced into thin, elegant strips.</p>
                         </div>
-                        <button class="recipe__card-button">Ver receta</button>
+                        <button class="recipe__card-button">View recipe</button>
                     </div>
                     <div class="recipe__card">
                         <img alt="Plato oriental" class="recipe__card-image"
@@ -83,7 +83,7 @@
                             <h4 class="recipe__card-title">Oriental dish</h4>
                             <p class="recipe__card-description">A flavorful stir-fry with classic Asian seasonings.</p>
                         </div>
-                        <button class="recipe__card-button">Ver receta</button>
+                        <button class="recipe__card-button">View recipe</button>
                     </div>
                     <div class="recipe__card">
                         <img alt="Remolachas horneadas" class="recipe__card-image"
@@ -92,7 +92,7 @@
                             <h4 class="recipe__card-title">Baked beets</h4>
                             <p class="recipe__card-description">Roasted root vegetables with a sweet, earthy taste.</p>
                         </div>
-                        <button class="recipe__card-button">Ver receta</button>
+                        <button class="recipe__card-button">View recipe</button>
                     </div>
                 </div>
             </div>
