--- a/hero.html
+++ b/hero.html
@@ -22,7 +22,7 @@
                         <a class="header__nav-link" href="./about.html">ABOUT</a>
                     </li>
                     <li class="header__nav-item">
-                        <a class="header__nav-link header__nav-link--active" href="./recipes.html">RECIPES</a>
+                        <a class="header__nav-link" href="./recipes.html">RECIPES</a>
                     </li>
                     <li class="header__nav-item">
                         <a class="header__nav-link" href="./contact.html">CONTACT</a>
