--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
     <header class="header">
         <div class="header__content">
             <div class="header__brand">
-                <a href="./hero.html">
+                <a href="./index.html">
                     <img class="header__brand--logo" src="./assets/logo.png" alt="logo" />
                 </a>
             </div>
