--- a/about.html
+++ b/about.html
@@ -29,7 +29,7 @@
                     </li>
                 </ul>
             </nav>
-            <div class="header__menu-button">☰☰</div>
+            <div id="toggleButton" class="header__menu-button">☰☰</div>
         </div>
     </header>
 
@@ -61,11 +61,29 @@
         </section>
     </main>
 
+    <div id="floatingElement" class="floating-element">
+        <nav class="header__nav--float">
+            <ul class="header__nav-list--float">
+                <li class="header__nav-item--float">
+                    <a class="header__nav-link--float" href="./about.html">ABOUT</a>
+                </li>
+                <li class="header__nav-item--float">
+                    <a class="header__nav-link--float" href="./recipes.html">RECIPES</a>
+                </li>
+                <li class="header__nav-item--float">
+                    <a class="header__nav-link--float" href="./contact.html">CONTACT</a>
+                </li>
+            </ul>
+        </nav>
+    </div>
+
     <footer class="footer">
         <div class="footer__content">
             <p class="footer__text">© 2026 <span class="main-font">fruta & fruto</span>. All rights reserved.</p>
         </div>
     </footer>
+
+    <script src="./app.js"></script>
 
 </body>
 
