update/js logic to responsive menu nav

--- a/index.html
+++ b/index.html
@@ -51,13 +51,13 @@
         <nav class="header__nav--float">
             <ul class="header__nav-list--float">
                 <li class="header__nav-item--float">
-                    <a class="header__nav-link--float" href="./about.html">ABOUT</a>
+                    <a class="header__nav-link--float" href="./about.html" onclick="toggleElement()">ABOUT</a>
                 </li>
                 <li class="header__nav-item--float">
-                    <a class="header__nav-link--float" href="./recipes.html">RECIPES</a>
+                    <a class="header__nav-link--float" href="./recipes.html" onclick="toggleElement()">RECIPES</a>
                 </li>
                 <li class="header__nav-item--float">
-                    <a class="header__nav-link--float" href="./contact.html">CONTACT</a>
+                    <a class="header__nav-link--float" href="./contact.html" onclick="toggleElement()">CONTACT</a>
                 </li>
             </ul>
         </nav>
